# OpenPiano

./: .gitignore  README.md
OpenPiano/: OpenPiano.jucer
OpenPiano/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
OpenPianoCore/: CMakeLists.txt  array_helpers.cpp  array_helpers.h  main.cpp  piano.h  string_hammer.h
OpenPianoCore/Source/: array_helpers.cpp  array_helpers.h  dr_wav.cpp  dr_wav.h  main.cpp  piano.h  string_hammer.h  thread_maneger.cpp  thread_maneger.h  thread_pool.h
OpenPianoJUCE/: CMakeLists.txt  OpenPiano.jucer
OpenPianoJUCE/Source/: HarmonicRatioComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrogramComponent.h
